--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,13 @@
         <gpg.skip>false</gpg.skip>
         <javadoc.skip>false</javadoc.skip>
         <mysql-connector-java.version>5.1.44</mysql-connector-java.version>
-        <spring-webmvc.version>5.2.2.RELEASE</spring-webmvc.version>
+        <spring-webmvc.version>5.2.3.RELEASE</spring-webmvc.version>
         <structlog4j.version>1.3</structlog4j.version>
         <ibit-mybatis-springboot-starter.version>1.0</ibit-mybatis-springboot-starter.version>
         <ibit-mybatis.version>1.1</ibit-mybatis.version>
         <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
         <jackson-annotations.version>2.8.0</jackson-annotations.version>
+        <hibernate-validator.version>5.3.6.Final</hibernate-validator.version>
     </properties>
 
     <name>ibit-springboot-web-starter</name>
@@ -115,7 +116,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>5.3.6.Final</version>
+            <version>${hibernate-validator.version}</version>
         </dependency>
 
         <!--servlet-->
