--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,11 @@
         <mysql-connector-java.version>5.1.44</mysql-connector-java.version>
         <spring-webmvc.version>5.2.3.RELEASE</spring-webmvc.version>
         <structlog4j.version>1.3</structlog4j.version>
-        <ibit-mybatis-springboot-starter.version>1.0</ibit-mybatis-springboot-starter.version>
-        <ibit-mybatis.version>1.1</ibit-mybatis.version>
+        <ibit-mybatis.version>2.0-SNAPSHOT</ibit-mybatis.version>
         <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
         <jackson-annotations.version>2.8.0</jackson-annotations.version>
         <hibernate-validator.version>5.3.6.Final</hibernate-validator.version>
+        <mybatis-spring-boot-starter.version>1.3.5</mybatis-spring-boot-starter.version>
     </properties>
 
     <name>ibit-springboot-web-starter</name>
@@ -80,24 +80,17 @@
             <version>${spring-webmvc.version}</version>
         </dependency>
 
-        <!--ibit-mybatis-->
-        <dependency>
-            <groupId>tech.ibit</groupId>
-            <artifactId>ibit-mybatis-springboot-starter</artifactId>
-            <version>${ibit-mybatis-springboot-starter.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>tech.ibit</groupId>
-                    <artifactId>ibit-mybatis</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
         <!--使用新版本ibit-mybatis-->
         <dependency>
             <groupId>tech.ibit</groupId>
             <artifactId>ibit-mybatis</artifactId>
             <version>${ibit-mybatis.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>${mybatis-spring-boot-starter.version}</version>
         </dependency>
 
         <!--structlog4j-->
