--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>tech.ibit</groupId>
     <artifactId>ibit-springboot-web-starter</artifactId>
-    <version>1.0</version>
+    <version>2.0</version>
     <packaging>jar</packaging>
 
 
@@ -19,7 +19,7 @@
         <mysql-connector-java.version>5.1.44</mysql-connector-java.version>
         <spring-webmvc.version>5.2.3.RELEASE</spring-webmvc.version>
         <structlog4j.version>1.3</structlog4j.version>
-        <ibit-mybatis.version>2.0-SNAPSHOT</ibit-mybatis.version>
+        <ibit-mybatis.version>2.0</ibit-mybatis.version>
         <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
         <jackson-annotations.version>2.8.0</jackson-annotations.version>
         <hibernate-validator.version>5.3.6.Final</hibernate-validator.version>
