--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,8 @@
 
     <groupId>tech.ibit</groupId>
     <artifactId>ibit-springboot-web-starter</artifactId>
-    <version>2.1</version>
+    <version>2.2</version>
     <packaging>jar</packaging>
-
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -16,14 +15,10 @@
         <java.version>1.8</java.version>
         <gpg.skip>false</gpg.skip>
         <javadoc.skip>false</javadoc.skip>
-        <mysql-connector-java.version>8.0.16</mysql-connector-java.version>
-        <spring-webmvc.version>5.2.3.RELEASE</spring-webmvc.version>
         <structlog4j.version>1.4</structlog4j.version>
-        <ibit-mybatis.version>2.5</ibit-mybatis.version>
-        <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
-        <jackson-annotations.version>2.8.0</jackson-annotations.version>
+        <spring-webmvc.version>5.2.3.RELEASE</spring-webmvc.version>
         <hibernate-validator.version>5.3.6.Final</hibernate-validator.version>
-        <mybatis-spring-boot-starter.version>1.3.5</mybatis-spring-boot-starter.version>
+        <jackson-annotations.version>2.8.0</jackson-annotations.version>
     </properties>
 
     <name>ibit-springboot-web-starter</name>
@@ -36,14 +31,14 @@
     </scm>
 
     <organization>
-        <name>IBIT TECH</name>
+        <name>iBit程序猿</name>
         <url>https://github.com/ibit-tech</url>
     </organization>
 
     <developers>
         <developer>
             <id>ibit-tech</id>
-            <name>IBIT TECH</name>
+            <name>iBit程序猿</name>
             <email>ibit_tech@aliyun.com</email>
         </developer>
 
@@ -66,31 +61,10 @@
 
     <dependencies>
 
-        <!-- mysql -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql-connector-java.version}</version>
-        </dependency>
-
-        <!--spring-->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>${spring-webmvc.version}</version>
-        </dependency>
-
-        <!--使用新版本ibit-mybatis-->
         <dependency>
             <groupId>tech.ibit</groupId>
-            <artifactId>ibit-mybatis</artifactId>
-            <version>${ibit-mybatis.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>${mybatis-spring-boot-starter.version}</version>
+            <artifactId>common-lang</artifactId>
+            <version>1.3</version>
         </dependency>
 
         <!--structlog4j-->
@@ -112,12 +86,14 @@
             <version>${hibernate-validator.version}</version>
         </dependency>
 
-        <!--servlet-->
+
+        <!--spring-->
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>${javax.servlet-api.version}</version>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring-webmvc.version}</version>
         </dependency>
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
